Minor bug fixes in G100 scripts

--- a/G100/Project.toml
+++ b/G100/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+PRASCapacityCredits = "2e1a2ed5-e89d-4cd3-bc86-c0e88a73d3a3"
 PowerSystems = "bcd98974-b02a-5e2f-9ee0-a103f5c450dd"
 SiennaPRASInterface = "4b496c86-8d00-441d-b504-079c710e0aa7"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
